Add wider column on index page

--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -27,19 +27,19 @@
             {
                 <table class="table">
                     <tr>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Referensnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Avslagen datum
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Kundens personnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Första sjukdag
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Sista sjukdag
                         </th>
                         <th class="medium-col">
@@ -99,19 +99,19 @@
             {
                 <table class="table">
                     <tr>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Referensnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Skapad datum
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Kundens personnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Första sjukdag
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Sista sjukdag
                         </th>
                         <th class="medium-col">
@@ -180,19 +180,19 @@
             {
                 <table class="table">
                     <tr>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Referensnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Inskickad datum
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Kundens personnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Första sjukdag
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Sista sjukdag
                         </th>
                         <th class="medium-col">
@@ -255,19 +255,19 @@
             {
                 <table class="table">
                     <tr>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Referensnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Godkänd datum
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Kundens personnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Första sjukdag
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-ombud">
                             Sista sjukdag
                         </th>
                         <th class="medium-col">
