--- a/Sjuklöner/Views/Claims/Receipt.cshtml
+++ b/Sjuklöner/Views/Claims/Receipt.cshtml
@@ -25,18 +25,18 @@
     @*<body class="assistant-claim">*@
     <div class="row">
         @*<p class="col col-md-2"></p>*@
-        <p class="page-header-no-padding-left col col-md-10">Tack för din ansökan!</p>
+        <p class="page-header4 col col-md-10">Tack för din ansökan!</p>
     </div>
 
     <div class="row">
         <div class="col">
             @*<p class="second-page-header-no-padding-left">Tack för din ansökan!</p>*@
-            <p>Handläggningstiden är normalt tre arbetsdagar. Vid godkännande sker utbetalning till angivet konto en eller två bankdagar efter beslut.
-            <br/>Vid avslag har du möjlighet att överklaga och skicka in en uppdaterad ansökan inom tre veckor efter beslut.</p>
+            <p class="left-margin-18">Handläggningstiden är normalt tre arbetsdagar. Vid godkännande sker utbetalning till angivet konto en eller två bankdagar efter beslut.
+            <br class="left-margin-18"/>Vid avslag har du möjlighet att överklaga och skicka in en uppdaterad ansökan inom tre veckor efter beslut.</p>
             <p></p>
-            <p class="bold-14">Referensnummer: @Model.ClaimNumber</p>
-            <p class="bold-14">Yrkat belopp (kr): @Model.ClaimSum</p>
-            <p>Med vänliga hälsningar,<br/>Vård- och omsorgsförvaltningen i Helsingborgs kommun</p>
+            <p class="bold-14 left-margin-18">Referensnummer: @Model.ClaimNumber</p>
+            <p class="bold-14 left-margin-18">Yrkat belopp (kr): @Model.ClaimSum</p>
+            <p class="left-margin-18">Med vänliga hälsningar,<br class="left-margin-18"/>Vård- och omsorgsförvaltningen i Helsingborgs kommun</p>
         </div>
     </div>
 
