--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -62,7 +62,7 @@
                     {
                         <tr>
                             <td>
-                                @Html.ActionLink(item.ReferenceNumber, "DecisionBoard", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.StatusDate)
@@ -152,7 +152,7 @@
                     {
                         <tr>
                             <td>
-                                @Html.ActionLink(item.ReferenceNumber, "DecisionBoard", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.StatusDate)
@@ -202,9 +202,9 @@
     <div class="row">
         <div class="col">
             <div class="second-page-header">
-                Avslagna
+                Beslutade
             </div>
-            @if (Model.RejectedClaims?.Count() > 0)
+            @if (Model.DecidedClaims?.Count() > 0)
             {
                 <table class="table">
                     <tr>
@@ -212,7 +212,7 @@
                             Referensnummer
                         </th>
                         <th class="small-col">
-                            Avslagen datum
+                            Beslutsdatum
                         </th>
                         <th class="small-col">
                             Assistansbolag
@@ -235,14 +235,20 @@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
+                        <th class="small-col">
+                            Godkänt belopp (Kr)
+                        </th>
+                        <th class="medium-col">
+                            Avslaget belopp (Kr)
+                        </th>
                         @*<th></th>*@
                     </tr>
 
-                    @foreach (var item in Model.RejectedClaims)
+                    @foreach (var item in Model.DecidedClaims)
                     {
                         <tr>
                             <td>
-                                @Html.ActionLink(item.ReferenceNumber, "DecisionBoard", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.StatusDate)
@@ -268,175 +274,11 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimSum)
                             </td>
-                            @*<td>
-                                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                            </td>*@
-                        </tr>
-                    }
-
-                </table>
-            }
-            else
-            {
-                <div class="left-margin-23 font-size-16">
-                    Det finns inga avslagna ansökningar.
-                </div>
-                <br />
-            }
-        </div>
-    </div>
-    <hr class="claim-divider" />
-
-    @*<div class="row">
-        <div class="col col-md-offset-2">
-            <div class="second-page-header">
-                Utkast
-            </div>
-            @if (Model.DraftClaims?.Count() > 0)
-            {
-                <table class="table">
-                    <tr>
-                        <th class="small-col">
-                            Referensnummer
-                        </th>
-                        <th class="small-col">
-                            Senaste statusändring
-                        </th>
-                        <th class="small-col">
-                            Kundens personnummer
-                        </th>
-                        <th class="small-col">
-                            Första sjukdag
-                        </th>
-                        <th class="small-col">
-                            Sista sjukdag
-                        </th>
-                        <th class="medium-col">
-                            Yrkat belopp (Kr)
-                        </th>
-                        <th></th>
-                    </tr>
-
-                    @foreach (var item in Model.DraftClaims)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ReferenceNumber)
+                            <td class="highlight-green-bold">
+                                @Html.DisplayFor(modelItem => item.ApprovedSum)
                             </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StatusDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ClaimSum)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                            </td>
-                        </tr>
-                    }
-
-                </table>
-            }
-            else
-            {
-                <div class="padding-left-no-claim">
-                    Du har inga utkast.
-                </div>
-                <br />
-            }
-        </div>
-    </div>
-    <hr class="claim-divider col-md-offset-2" />*@
-
-    
-
-    <div class="row">
-        <div class="col">
-            <div class="second-page-header">
-                Godkända
-            </div>
-            @if (Model.ApprovedClaims?.Count() > 0)
-            {
-                <table class="table">
-                    <tr>
-                        <th class="small-col">
-                            Referensnummer
-                        </th>
-                        <th class="small-col">
-                            Godkänd datum
-                        </th>
-                        <th class="small-col">
-                            Assistansbolag
-                        </th>
-                        <th class="small-col">
-                            Assistentens personnummer
-                        </th>
-                        <th class="small-col">
-                            Kundens personnummer
-                        </th>
-                        <th class="small-col">
-                            Första sjukdag
-                        </th>
-                        <th class="small-col">
-                            Sista sjukdag
-                        </th>
-                        <th class="small-col">
-                            Antal sjukdagar
-                        </th>
-                        <th class="medium-col">
-                            Yrkat belopp (Kr)
-                        </th>
-                        <th class="medium-col">
-                            Beslutat belopp (Kr)
-                        </th>
-                        @*<th></th>*@
-                    </tr>
-
-                    @foreach (var item in Model.ApprovedClaims)
-                    {
-                        <tr>
-                            <td>
-                                @Html.ActionLink(item.ReferenceNumber, "DecisionBoard", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StatusDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.AssistantSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ClaimSum)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DecidedSum)
+                            <td class="highlight-red-bold">
+                                @Html.DisplayFor(modelItem => item.RejectedSum)
                             </td>
                             @*<td>
                                 @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
@@ -451,7 +293,7 @@
             else
             {
                 <div class="left-margin-23 font-size-16">
-                    Det finns inga godkända ansökningar.
+                    Det finns inga beslutade ansökningar.
                 </div>
                 <br />
             }
@@ -459,4 +301,5 @@
     </div>
     <hr class="claim-divider" />
 
+   
 </body>
