--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -21,9 +21,9 @@
     <div class="row">
         <div class="col">
             <div class="second-page-header">
-                Avslagna
+                Beslutade
             </div>
-            @if (Model.RejectedClaims?.Count() > 0)
+            @if (Model.DecidedClaims?.Count() > 0)
             {
                 <table class="table">
                     <tr>
@@ -45,10 +45,16 @@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
+                        <th class="small-col">
+                            Godkänt belopp (Kr)
+                        </th>
+                        <th class="medium-col">
+                            Avslaget belopp (Kr)
+                        </th>
                         <th></th>
                     </tr>
 
-                    @foreach (var item in Model.RejectedClaims)
+                    @foreach (var item in Model.DecidedClaims)
                     {
                         <tr>
                             <td>
@@ -69,9 +75,19 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimSum)
                             </td>
+                            <td class="highlight-green-bold">
+                                @Html.DisplayFor(modelItem => item.ApprovedSum)
+                            </td>
+                            <td class="highlight-red-bold">
+                                @Html.DisplayFor(modelItem => item.RejectedSum)
+                            </td>
                             <td>
                                 @*@Html.ActionLink("Uppdatera", "Create", new { id = item.Id }, new { @class = "btn btn-success-small" }) |*@
                                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
+                                @if (item.RejectedSum > 1)
+                                {
+                                    @Html.ActionLink("Överklaga", "Create", null, new { @class = "btn btn-warning btn-warning-small" })
+                                }
                                 @*@Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary-small" })*@
                             </td>
                         </tr>
@@ -82,7 +98,7 @@
             else
             {
                 <div class="left-margin-23 font-size-16">
-                    Du har inga avslagna ansökningar.
+                    Du har inga beslutade ansökningar.
                 </div>
                 <br />
             }
@@ -239,79 +255,6 @@
             {
                 <div class="left-margin-23 font-size-16">
                     Du har inga ansökningar under handläggning.
-                </div>
-                <br />
-            }
-        </div>
-    </div>
-    <hr class="claim-divider" />
-
-    <div class="row">
-        <div class="col">
-            <div class="second-page-header">
-                Godkända
-            </div>
-            @if (Model.ApprovedClaims?.Count() > 0)
-            {
-                <table class="table">
-                    <tr>
-                        <th class="small-col-ombud">
-                            Referensnummer
-                        </th>
-                        <th class="small-col-ombud">
-                            Godkänd datum
-                        </th>
-                        <th class="small-col-ombud">
-                            Kundens personnummer
-                        </th>
-                        <th class="small-col-ombud">
-                            Första sjukdag
-                        </th>
-                        <th class="small-col-ombud">
-                            Sista sjukdag
-                        </th>
-                        <th class="medium-col">
-                            Yrkat belopp (Kr)
-                        </th>
-                        <th></th>
-                    </tr>
-
-                    @foreach (var item in Model.ApprovedClaims)
-                    {
-                        <tr>
-                            <td>
-                                @Html.ActionLink(item.ReferenceNumber, "ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StatusDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ClaimSum)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
-                                @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
-                            </td>
-                        </tr>
-                    }
-
-                </table>
-            }
-            else
-            {
-                <div class="left-margin-23 font-size-16">
-                    Du har inga godkända ansökningar.
                 </div>
                 <br />
             }
