Fixed bug where information was not being sent to post action.

--- a/Sjuklöner/Views/Claims/Decide.cshtml
+++ b/Sjuklöner/Views/Claims/Decide.cshtml
@@ -18,6 +18,7 @@
             @Html.LabelFor(model => model.ClaimNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.ClaimNumber, null)
+                @Html.HiddenFor(model => Model.ClaimNumber);
             </div>
         </div>
 
@@ -25,6 +26,7 @@
             @Html.LabelFor(model => model.CareCompany, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.CareCompany, null)
+                @Html.HiddenFor(model => Model.CareCompany);
             </div>
         </div>
 
@@ -32,6 +34,7 @@
             @Html.LabelFor(model => model.AssistantSSN, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.AssistantSSN, null)
+                @Html.HiddenFor(model => Model.AssistantSSN);
             </div>
         </div>
 
@@ -39,6 +42,7 @@
             @Html.LabelFor(model => model.QualifyingDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.QualifyingDate, null)
+                @Html.HiddenFor(model => Model.QualifyingDate);
             </div>
         </div>
 
@@ -46,6 +50,7 @@
             @Html.LabelFor(model => model.LastDayOfSickness, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.LastDayOfSickness, null)
+                @Html.HiddenFor(model => Model.LastDayOfSickness);
             </div>
         </div>
 
@@ -53,6 +58,7 @@
             @Html.LabelFor(model => model.ClaimSum, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.ClaimSum, null)
+                @Html.HiddenFor(model => Model.ClaimSum);
             </div>
         </div>
 
